Fix: 반응형일때 전체공유 표시 UI z-index 조정

--- a/src/assets/style/service/service-stream.scss
+++ b/src/assets/style/service/service-stream.scss
@@ -239,6 +239,7 @@
     position: fixed;
     top: 6.8rem;
     left: 1.6rem;
+    z-index: 2;
     width: 7.9rem;
     height: 3rem;
     @include fontLevel(50);
